fix(style): adding word-wrap to restrict  content from exceeding screen width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ h1 {
 
 /*Ensure blog content doesn't exceed the page size*/
 .blog_content {
-	max-width: 100%;
+	word-wrap: break-word;
 }
 
 /*Resize iframes*/
